k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: distributed-system
  labels:
    name: distributed-system
