k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dist-sys-ingress
  namespace: distributed-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dist-sys.example.com
      secretName: dist-sys-tls-cert
  rules:
    - host: dist-sys.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dist-sys
                port:
                  number: 8000
